# django-multiverse

./: .gitignore  LICENSE  README.md  pyproject.toml
multitenancy/: middleware.py  signals.py
multitenancy/db/backends/: utils.py
multitenancy/db/backends/postgresql/: __init__.py
multitenancy/tasks/: django_q.py
multitenancy/test/: __init__.py  cases.py
multitenancy/test/drf/: __init__.py
multiverse/: admin.py  apps.py  awareness.py  models.py  utils.py
multiverse/db/: router.py
multiverse/db/backends/postgresql/: utils.py
multiverse/db/backends/sqlite3/: utils.py
multiverse/management/commands/: create_tenant.py  destroy_tenant.py
multiverse/migrations/: 0001_initial.py
multiverse/tasks/: __init__.py
multiverse/test/: client.py  utls.py
multiverse/test/drf/: cases.py  client.py
