[tool.poetry]
name = "django-multiverse"
version = "1.0.0"
description = "Django Multiverse: Multi-Tenancy for Django"
authors = ["Daniel Pinto <dmp593@gmail.com>"]
license = "MIT"
repository = "https://github.com/dmp593/django-multiverse"
readme = "README.md"
package-mode = true
keywords = ["Django", "Multiverse", "Multi-Tenancy", "Tenants"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

packages = [
    { include = "multiverse/**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
psycopg = { version = "^3.2.1", optional = true }
djangorestframework = { version = "^3.15", optional = true }
django-q2 = { version = "^1.6.2", optional = true }

[tool.poetry.extras]
postgres = ["psycopg"]
django-q2 = ["django-q2"]
drf = ["djangorestframework"]
all = ["psycopg", "django-q2", "djangorestframework"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
